# pilther

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
docs/: showcase.md
pilther/: __init__.py  _build_zig.py  _native.py  _native_diffusion.py  _native_palette_diffusion.py  atkinson.py  bluenoise.py  burkes.py  cli.py  colorspace.py  dither.py  metrics.py  palette.py  palette_diffusion.py  sierra2.py  sierra3.py  stucki.py
scripts/: generate_showcase.py
src/: atkinson.zig  burkes.zig  color.zig  diffusion_ring.zig  kernel.zig  palette_diffusion.zig  pilther.zig  sierra2.zig  sierra3.zig  stucki.zig  threshold_diffusion.zig
tests/: conftest.py  test_atkinson.py  test_build.py  test_cli.py  test_colorspace.py  test_diffusion_filters.py  test_metrics.py  test_native.py  test_palette.py  test_palette_diffusion.py
